gts-macros/tests/compile_fail/base_true_multi_segment.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, or gtsId) of type GtsInstanceId OR a GTS Type field (one of: type, gts_type, gtsType, or schema) of type GtsSchemaId
  --> tests/compile_fail/base_true_multi_segment.rs:13:12
   |
13 | pub struct InvalidBaseV1 {
   |            ^^^^^^^^^^^^^
